WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226577
Cherry-pick webrtc fix to correctly handle audio track state in case of renegotiation
https://bugs.webkit.org/show_bug.cgi?id=226577
Summary
Cherry-pick webrtc fix to correctly handle audio track state in case of reneg...
youenn fablet
Reported
2021-06-03 05:57:52 PDT
Cherry-picking of fix from
https://bugs.chromium.org/p/chromium/issues/detail?id=1121454
Attachments
Patch
(17.67 KB, patch)
2021-06-03 06:00 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-06-03 06:00:34 PDT
Created
attachment 430464
[details]
Patch
youenn fablet
Comment 2
2021-06-03 06:00:45 PDT
<
rdar://78634908
>
Eric Carlson
Comment 3
2021-06-03 08:55:05 PDT
Comment on
attachment 430464
[details]
Patch rs=me
EWS
Comment 4
2021-06-03 10:25:34 PDT
Committed
r278410
(
238435@main
): <
https://commits.webkit.org/238435@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430464
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug